--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,3 +11,7 @@ workflows:
   build-deploy:
     jobs:
       - test:
+          filters:
+            branches:
+              only:
+                - main
