--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,6 +2,9 @@
 version: 2.1
 jobs:
   mytest:
+    machine:
+      image: ubuntu-2004:202111-02
+      docker_layer_caching: true
     steps:
       # SETUP
       - run:
