--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,6 +3,14 @@ version: 2.1
 orbs:
   aws-cli: circleci/aws-cli@2.1
 jobs:
+  aws-cli-cred-setup:
+    executor: aws-cli/default
+    steps:
+      - aws-cli/setup:
+          aws-access-key-id: AWS_ACCESS_KEY
+          aws-secret-access-key: AWS_ACCESS_SECRET
+          aws-region: AWS_REGION_NAME
+
   build_package:
     machine:
       image: ubuntu-2004:202111-02
@@ -33,6 +41,7 @@ jobs:
       - run:
           name: Setup AWS CLI
           command: sudo apt-get update && sudo apt-get install awscli
+
       - run:
           name: Login to docker (ECR)
           command: aws ecr get-login-password --region eu-west-3 | docker login --username AWS --password-stdin 163668745705.dkr.ecr.eu-west-3.amazonaws.com
@@ -45,3 +54,5 @@ workflows:
             branches:
               only:
                 - main
+      - aws-cli-cred-setup:
+          context: aws
