--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -40,11 +40,11 @@ jobs:
 
       - run:
           name: Build docker image
-          command: docker build -t 163668745705.dkr.ecr.eu-west-3.amazonaws.com/surfy:${CIRCLE_BRANCH} -t 163668745705.dkr.ecr.eu-west-3.amazonaws.com/surfy:${CIRCLE_BRANCH}-$(date +"%Y%m%d")-${CIRCLE_SHA1} .
+          command: docker build -t 163668745705.dkr.ecr.eu-west-3.amazonaws.com/surfy:${CIRCLE_BRANCH}-$(date +"%Y%m%d")-${CIRCLE_SHA1} .
 
       - run:
           name: Push docker image to registry (ECR)
-          command: docker push 163668745705.dkr.ecr.eu-west-3.amazonaws.com/surfy:${CIRCLE_BRANCH} && docker push 163668745705.dkr.ecr.eu-west-3.amazonaws.com/surfy:${CIRCLE_BRANCH}-$(date +"%Y%m%d")-${CIRCLE_SHA1}
+          command: docker push 163668745705.dkr.ecr.eu-west-3.amazonaws.com/surfy:${CIRCLE_BRANCH}-$(date +"%Y%m%d")-${CIRCLE_SHA1}
 
 
 workflows:
