--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -40,12 +40,11 @@ jobs:
 
       - run:
           name: Build docker image
-          command: docker build -t 163668745705.dkr.ecr.eu-west-3.amazonaws.com/surfy:${CIRCLE_BRANCH}-$(date +"%Y%m%d")-${CIRCLE_SHA1} .
+          command: docker build -t 163668745705.dkr.ecr.eu-west-3.amazonaws.com/surfy .
 
       - run:
           name: Push docker image to registry (ECR)
-          command: docker push 163668745705.dkr.ecr.eu-west-3.amazonaws.com/surfy:${CIRCLE_BRANCH}-$(date +"%Y%m%d")-${CIRCLE_SHA1}
-
+          command: docker push 163668745705.dkr.ecr.eu-west-3.amazonaws.com/surfy
 
 workflows:
   deploy-surfy:
@@ -54,4 +53,4 @@ workflows:
           filters:
             branches:
               only:
-                - main
+                - main            
