new push for terraform

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -49,7 +49,7 @@ jobs:
 
       - run:
           name: Push docker image to registry (ECR)
-          command: docker push 163668745705.dkr.ecr.eu-west-3.amazonaws.com/surfy:latest
+          command: docker push 163668745705.dkr.ecr.eu-west-3.amazonaws.com/surfy-frontend:latest
 
 workflows:
   deploy-surfy:
