--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -71,4 +71,7 @@ workflows:
           context: aws
           requires:
             - build_package
- 
+          filters:
+            branches:
+              only:
+                - main 
